# CL-EDEN-kernel

./: Android.bp  CPPLINT.cfg  apply_commit_message
src/: Android.bp  CMakeLists.txt  CMakeLists.txt.in  README.md  build.sh  coverage.py  enn_output.filelist  push.sh  release.sh  x86_build.cmake
src/client/: CMakeLists.txt  enn_api-async_test.cc  enn_api-public.cc  enn_api-public.h  enn_api-public.hpp  enn_api-type.h  enn_api.cc  enn_api.h  enn_api_test.cc  enn_client_parser.hpp  enn_context_manager.cc  enn_context_manager.h  enn_model_container.hpp  enn_model_container_test.cc
src/common/: CMakeLists.txt  compiler.h  enn_common_type.h  enn_debug.cc  enn_debug.h  enn_debug_test.cc  enn_debug_zone.h  enn_log.hpp  enn_memory_allocator.h  enn_memory_allocator_device_buffer.cc  enn_memory_allocator_device_buffer.h  enn_memory_allocator_heap.cc  enn_memory_allocator_heap.h  enn_memory_manager-type.h  enn_memory_manager.cc  enn_memory_manager.h  enn_memory_manager_test.cc  enn_preference_generator.hpp  enn_preference_generator_test.cc  enn_utils.cc  enn_utils.h  enn_utils_buffer.hpp  enn_utils_buffer_test.cc  enn_utils_test.cc  extended_type_traits.hpp  helper_templates.hpp  identifier.hpp  identifier_base.hpp  identifier_chopper.hpp  identifier_decorator.hpp  ienn_memory_manager.hpp  ref_hash_map.hpp
src/medium/: README.md  enn_client_manager.hpp  enn_client_manager_test.cc  enn_medium_interface.cc  enn_medium_interface.h  enn_medium_utils.hpp  types.hal.h  types.hal.hidl.h
src/medium/hidl/enn/: update-makefiles.sh
src/model/: CMakeLists.txt  attribute.hpp  graph_types.hpp  model.hpp  model_test.cc  types.hpp
src/model/component/operator/: CMakeLists.txt  ioperator.hpp  ioperator_builder.hpp  operator.hpp  operator_builder.hpp  operator_list.hpp  operator_list_builder.hpp  operator_list_test.cc  operator_test.cc
src/model/component/tensor/: CMakeLists.txt  feature_map.hpp  feature_map_builder.hpp  feature_map_test.cc  parameter.hpp  parameter_builder.hpp  parameter_test.cc  scalar.hpp  scalar_builder.hpp  scalar_test.cc  tensor.hpp  tensor_builder.hpp
src/model/generator/: CMakeLists.txt  generator.cc  generator.hpp  generator_test.cc
src/model/graph/: CMakeLists.txt  graph.hpp  graph_test.cc
src/model/graph/iterator/: iterator.hpp
src/model/memory/: CMakeLists.txt  allocated_buffer.hpp  buffer.hpp  buffer_table.hpp  buffer_test.cc  indexed_buffer.hpp
src/model/meta_data/: buffer_meta_data.hpp
src/model/parser/: CMakeLists.txt  parser.cc  parser.hpp  parser_test.cc  parser_utils.hpp
src/model/parser/cgo/: cgo_utils.hpp  dsp_kernel_table.hpp
src/model/parser/strategy/: cgo_parse_strategy.cc  cgo_parse_strategy.hpp  coded_parse_strategy.cc  coded_parse_strategy.hpp  nnc_parse_strategy.cc  nnc_parse_strategy.hpp  strategy.hpp
src/model/pool/: manager.cc
src/model/raw/: CMakeLists.txt  model.cc  model.hpp
src/model/raw/data/: attribute.hpp  binary.hpp  buffer.hpp  control_option.hpp  dsp_options.hpp  graph_info.hpp  model_option.hpp  npu_options.hpp  operator.hpp  operator_options.hpp  region.hpp  scalar.hpp  tensor.hpp
src/model/schema/: schema_cgo.h  schema_nnc.h
src/model/schema/flatbuffers/: base.h  flatbuffers.h  flexbuffers.h  util.h
src/preset/: preset_config.cc  preset_config.hpp  preset_config_test.cc
src/preset/jsoncpp/: jsoncpp.cpp
src/preset/jsoncpp/json/: json-forwards.h  json.h
src/rt_stub/: EdenRuntime.h  EdenRuntimeType.h  eden_nn.cpp  eden_nn.h  eden_nn_api.cpp  eden_nn_api.h  eden_nn_types.h  eden_rt_stub.cc  eden_types.h  log.h
src/runtime/: CMakeLists.txt  engine.cc  engine.hpp  engine_test.cc  userdriver_manager.hpp
src/runtime/client_process/: CMakeLists.txt  client_process.hpp  client_process_test.cc
src/runtime/dispatch/: close_dispatcher.hpp  dispatchable.hpp  dispatcher_interface.hpp  execute_dispatcher.hpp  open_dispatcher.hpp  prepare_dispatcher.hpp  session_id_query_dispatcher.hpp
src/runtime/executable_model/: CMakeLists.txt  executable_model.hpp  executable_model_test.cc  executable_operator_list.hpp  executable_operator_list_test.cc  executable_oplist_session_info.hpp
src/runtime/execute_request/: CMakeLists.txt  execute_request.hpp  execute_request_test.cc  operator_list_execute_request.hpp
src/runtime/pool/: CMakeLists.txt  dependency_tree_pool.hpp  manager.cc  manager.hpp  pool_manager_test.cc  poolable.hpp
src/runtime/scheduler/: CMakeLists.txt  static_scheduler.hpp  static_scheduler_test.cc
src/test/: materials.h
src/test/internal/: enn_test_driver_debug_utils.h  enn_test_driver_model_container.h
src/test/internal/unit/: enn_gtest_internal_unittest_main.cc
src/tool/dumper/: frequency_dumper.hpp  frequency_table.hpp  utilization_dumper.hpp  utilization_table.hpp
src/tool/pamir_fw_parser/: ofi_orca_fw_graph_parser.h
src/tool/profiler/: ExynosNnProfiler.cpp  ProfileData.cpp  ProfileTreeNode.cpp  ProfileWatcher.cpp
src/tool/profiler/include/: ExynosNnProfiler.h  ExynosNnProfiler.hpp  ExynosNnProfilerApi.h  ExynosNnProfilerConfig.h  ProfileData.hpp  ProfileDataQueue.hpp  ProfileTreeNode.hpp  ProfileWatcher.hpp  ProfilerLog.h
src/userdriver/common/: IOperationConstructor.h  IOperationExecutor.h  UserDriver.h  UserDriverTypes.h
src/userdriver/common/eden_osal/: dmabuf.c  dmabuf.h  eden_memory.c  eden_memory.h  ion.c  ion.h  ion_uapi.h  (+5 more)
src/userdriver/cpu/: CMakeLists.txt  cpu_op_constructor.cc  cpu_op_constructor.h  cpu_op_executor.cc  cpu_op_executor.h  cpu_userdriver.cc  cpu_userdriver.h  cpu_userdriver_test.cc  readme.md
src/userdriver/gpu/: CMakeLists.txt  gpu_op_constructor.cc  gpu_op_constructor.h  gpu_op_executor.cc  gpu_op_executor.h  gpu_userdriver.cc  gpu_userdriver.h  gpu_userdriver_test.cc
src/userdriver/unified/: drv_usr_if.h  dsp_bin_info.cc  dsp_bin_info.h  dsp_common_struct.h  dsp_ud_step1.md  dsp_userdriver.cc  dsp_userdriver.h  dsp_userdriver_test.cc  error_codes.h  link_vs4l.cc  link_vs4l.h  link_vs4l_config.h  npu_userdriver.cc  npu_userdriver.h  npu_userdriver_test.cc  profile_util.h  readme.md  unified_userdriver.cc  unified_userdriver.h  utils.h  vs4l.h
(+479 files in other folders)
